// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button executes callback 1`] = `
<button
  className="sc-bxivhb jdkbtw sc-htpNat clPCcB sc-bwzfXH kGsEoO sc-bdVaJa hZtEcp"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`Button executes callback 2`] = `
<button
  className="sc-bxivhb jdkbtw sc-htpNat clPCcB sc-bwzfXH kGsEoO sc-bdVaJa hZtEcp"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`SnippetPreviewButton executes callback 1`] = `
<button
  className="sc-ifAKCX hpLiYA sc-bxivhb jdkbtw sc-htpNat clPCcB sc-bwzfXH kGsEoO sc-bdVaJa hZtEcp"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`SnippetPreviewButton executes callback 2`] = `
<button
  className="sc-ifAKCX hpLiYA sc-bxivhb jdkbtw sc-htpNat clPCcB sc-bwzfXH kGsEoO sc-bdVaJa hZtEcp"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`the Button matches the snapshot 1`] = `
<button
  className="sc-bxivhb jdkbtw sc-htpNat clPCcB sc-bwzfXH kGsEoO sc-bdVaJa hZtEcp"
  type="button"
>
  ButtonValue
</button>
`;

exports[`the SnippetPreviewButton matches the snapshot 1`] = `
<button
  className="sc-ifAKCX hpLiYA sc-bxivhb jdkbtw sc-htpNat clPCcB sc-bwzfXH kGsEoO sc-bdVaJa hZtEcp"
  type="button"
>
  ButtonValue
</button>
`;
